--- a/2022-05-08.md
+++ b/2022-05-08.md
@@ -5,6 +5,7 @@
 
 @tomw's mic wasn't working, @zbs arrived for the 2nd part.
 
+
 ## agenda topics:
 
 - essential feature selection / scope / vision
@@ -18,39 +19,47 @@
 
 #### @awwaid
 
-would provide:
-- mostly editing (proof reading?)
-- potentially code tutorials about fundamentals
+would provide mostly editing (proof reading?).
+
+potentially code tutorials about fundamentals.
 
 
 #### @radioedit (Duncan)
 
-experienced in editing + writting professionally
+experienced in editing + writting professionally.
+
 designer by trade.
 
 
 ### @ericmoderbacher (Eric)
 
-pretty new to the discord & in this project but is motivated and just wanna be helpful
+pretty new to the discord & in this project but is motivated and just wanna be helpful.
 
 
 ### @jaseknighter (Jonathan)
 
-no opinion (yet) on what his contribution might be
-good at reading/writting but bad at design
+no opinion (yet) on what his contribution might be.
+
+good at reading/writting but bad at design.
 
 
 ### @watercolor
 
 motivated as not so many similar initiatives (in synth / DIY communities)
+
 does writting/editing for a living.
+
 doesn't touch on the design aspect.
+
 
 ### @Alanza (Rylee)
 
 interested in helping out.
+
 did graphic design in college.
+
 profiscient w/ Adobe suite, notably InDesign.
+
 motivated by the idea of this zine.
 
 
@@ -59,6 +68,7 @@ motivated by the idea of this zine.
 #### purpose
 
 @radioedit: **snapshot of the current state of the community**
+
 -> in other words: **capture the excitment**
 
 @radioedit: have it be **inspirational**, to motivate readers to **try new things** (scripts they never tried, coding...)
@@ -74,6 +84,7 @@ in this fashion feature newly released scripts (@zbs) as well older **unknown ge
 
 @jaseknighter: 1 theme / issue. smoother xp for the reader, based on expectations when seing the cover.
 the theme can/must be abstract (echoes the poetry aspect).
+
 -> don't explain everything, leave part of the interpretation to the reader.
 
 @eigen: repeating features between issues
@@ -85,6 +96,7 @@ the theme can/must be abstract (echoes the poetry aspect).
 - @eigen: balance between **subjective** (relatable experiences, emotions) & **objective** (technical stuff)
 
 -> would echo the 2 main sections (**PLAY/MAKE**), PLAY being more poetical/emotional and MAKE for practical/technical
+
 BUT not a total & clear separation️
 
 -> idea of a **"shared interview"** between a script author and musician who uses it extensively is the perfect way to link both aspects
@@ -138,15 +150,18 @@ wants a **playground repo** for throw-away ideas & WIP articles. to "use the mom
 reminds him of [Make:](https://makezine.com/).
 
 "entry level" can relate to scripting BUT also mic level, using github...
+
 -> could give ideas for articles in the PLAY section
 
 for lots of synth nerds, norns could be intimidating.
+
 this zine could provide small bite at a time, enough to **empower readers**.
 
 
 #### @radioedit
 
 so far asumption for it to be for the community (present or future)
+
 -> **part of the audience should be peeps outisde of the community**
 
 **demistifying aspect**
@@ -155,7 +170,8 @@ so far asumption for it to be for the community (present or future)
 #### @eigen
 
 publishing software to use?
-i'm ok w/ re-learning inDesign if that's what the majority uses, or even step down of the publishing side of things.
+
+ok w/ re-learning inDesign if that's what the majority uses, or even step down of the publishing side of things.
 
 for design/protoyping, we could use whatever we want!
 
