--- a/2022-04-30.md
+++ b/2022-04-30.md
@@ -1,9 +1,9 @@
-# nornzine #1 meeting notes - brainstorm
+# nornzine #1 - brainstorm #1 (first meeting)
 20220430
 
 ## attendees: @jaseknighter (Jonathan), @eigen (Jordan), @zbs (Z), @karol (Karol), @Dewb (Michael), @William Hazzard, @sixolet (Naomi), @chochacho
 
-## agenda topics: 
+## agenda topics:
 * purpose of the zine (not a monome ad)
 * scope (e.g. teletype may be too big to include, crow could be included more easily)
 * name of zine
@@ -18,13 +18,13 @@
 ### purpose
 * longer form description of the process people use to create scripts
 * discord and other things are ephemeral. the zine is a more permanent record that can be easily be referenced for inspiration. like a time capsule.
-* interested in getting people who haven't scripted excited to make scripts 
+* interested in getting people who haven't scripted excited to make scripts
 * there could be several levels of engagement.
   * total newcomers
   * people with a basic understanding who are struggling to actually create something they can share with the community (what's missing? motivation? something else?)
   * veteran script developers
 * inspiration from expert scripters/musicians
-* much of proposed contents are about making scripts. however, most of the user base doesn't want to create scripts, just want to use them to create music. we need to target both groups, but there should be a away to link the two. 
+* much of proposed contents are about making scripts. however, most of the user base doesn't want to create scripts, just want to use them to create music. we need to target both groups, but there should be a away to link the two.
 * maintain a tension between poetry (inspiration) and technique (practicality)
 * articulate a set of values and aesthetics
 * include articles that are contextually-specific and globally-accessable
@@ -42,7 +42,7 @@
 
 ### organization
 * there should be threads connecting different parts of the zine together
-* there should be synergy between workshops and the magazine 
+* there should be synergy between workshops and the magazine
 
 ### zine format
 * paper magazine (Jordon is using affinity designer) with included ephemera (e.g. a cd). this could be print on demand
@@ -60,7 +60,7 @@
     * synthesizer overview
 * there are threads on the lines forum that could turn into articles
 * review the mapcorps articles for inspiration (e.g. triggering a script
-* something like a disquiet junto project that gets announced ahead of publication that gets included/referenced in the magazine.  
+* something like a disquiet junto project that gets announced ahead of publication that gets included/referenced in the magazine.
   * alternatively, the magazine could propose a challenge that readers would respond to (musically or in scripting)
 * instructions to make a paper whistle (or other instrument) and have people share the music they made with the whistle (or turn the zine into an instrument. or make music with the norns buttons.)
 * concert/album reviews
@@ -73,4 +73,3 @@
 * Jordan to suggest times/dates for next meeting
 * (done) Jonathan to publish the notes in a GitHub
 * everyone: discuss the notes in the zine chat
-
