--- a/2022-05-08.md
+++ b/2022-05-08.md
@@ -1,4 +1,4 @@
-# nornzine #1 meeting notes - brainstorm
+# nornzine #1 - brainstorm #2
 20220508
 
 ## attendees: @jaseknighter (Jonathan), @eigen (Jordan), @awwaid, @radioedit (Duncan), @ericmoderbacher (Eric), @Alanza (Rylee) @watercolor (Ian?), @tomw, @zbs (Z)
