--- a/2022-05-08.md
+++ b/2022-05-08.md
@@ -178,7 +178,7 @@ for design/protoyping, we could use whatever we want!
 -> also have a **"tag soup"** alongside moodboard, vocab (including poetry) we wanna use in thez issue.
 
 
-### next steps
+## next steps
 
 * @eigen (Jordan): draft a call for contributors message
 * everyone: proofread this message
