--- a/2022-05-08.md
+++ b/2022-05-08.md
@@ -10,12 +10,12 @@
 
 - essential feature selection / scope / vision
 - prepare for opening the gates to more contributors
-- background thinking about aestetics / publication frequency / nb of pages
+- background thinking about aesthetics / publication frequency / nb of pages
 
 
 ## notes:
 
-### personal presentation / expected involvment
+### personal presentation / expected involvement
 
 #### @awwaid
 
@@ -26,7 +26,7 @@ potentially code tutorials about fundamentals.
 
 #### @radioedit (Duncan)
 
-experienced in editing + writting professionally.
+experienced in editing + writing professionally.
 
 designer by trade.
 
@@ -40,14 +40,14 @@ pretty new to the discord & in this project but is motivated and just wanna be h
 
 no opinion (yet) on what his contribution might be.
 
-good at reading/writting but bad at design.
+good at reading/writing but bad at design.
 
 
 ### @watercolor
 
 motivated as not so many similar initiatives (in synth / DIY communities)
 
-does writting/editing for a living.
+does writing/editing for a living.
 
 doesn't touch on the design aspect.
 
@@ -58,7 +58,7 @@ interested in helping out.
 
 did graphic design in college.
 
-profiscient w/ Adobe suite, notably InDesign.
+proficient w/ Adobe suite, notably InDesign.
 
 motivated by the idea of this zine.
 
@@ -69,7 +69,7 @@ motivated by the idea of this zine.
 
 @radioedit: **snapshot of the current state of the community**
 
--> in other words: **capture the excitment**
+-> in other words: **capture the excitement**
 
 @radioedit: have it be **inspirational**, to motivate readers to **try new things** (scripts they never tried, coding...)
 
@@ -77,12 +77,12 @@ in this fashion feature newly released scripts (@zbs) as well older **unknown ge
 
 @radioedit: more broadly, elevate lesser known stuff from the community (not only scripts, but also music...)
 
-@ericmoderbacher + @radioedit: **don't target only the existing community** (.i.e lines) but broader appeal: **demistify** norns & other music-making aspects, **empower** readers.
+@ericmoderbacher + @radioedit: **don't target only the existing community** (.i.e lines) but broader appeal: **demystify** norns & other music-making aspects, **empower** readers.
 
 
 #### repeatability in the structure
 
-@jaseknighter: 1 theme / issue. smoother xp for the reader, based on expectations when seing the cover.
+@jaseknighter: 1 theme / issue. smoother xp for the reader, based on expectations when seeing the cover.
 the theme can/must be abstract (echoes the poetry aspect).
 
 -> don't explain everything, leave part of the interpretation to the reader.
@@ -104,7 +104,7 @@ BUT not a total & clear separation️
 
 ## practical considerations
 
-#### aestetics
+#### aesthetics
 
 it should not look too professional. leave some amateurism as it has 💖.
 
@@ -121,7 +121,7 @@ would be cool to have it a perpetual project.
 
 even if that kinda sucks, need a relatively small editorial team to converge to a coherent release.
 
-**rotation in the editorial team** to aleviate the autoritarian aspect.
+**rotation in the editorial team** to alleviate the authoritarian aspect.
 
 **onboarding new editors** should be one main goal.
 
@@ -142,7 +142,7 @@ have a queue between issues VS accept everything as we're first & foremost digit
 
 wants a **playground repo** for throw-away ideas & WIP articles. to "use the momentum".
 
--> would act like a moodboard.
+-> would act like a mood-board.
 
 
 #### @ericmoderbacher
@@ -160,11 +160,11 @@ this zine could provide small bite at a time, enough to **empower readers**.
 
 #### @radioedit
 
-so far asumption for it to be for the community (present or future)
+so far assumption for it to be for the community (present or future)
 
--> **part of the audience should be peeps outisde of the community**
+-> **part of the audience should be peeps outside of the community**
 
-**demistifying aspect**
+**demystifying aspect**
 
 
 #### @eigen
@@ -173,9 +173,9 @@ publishing software to use?
 
 ok w/ re-learning inDesign if that's what the majority uses, or even step down of the publishing side of things.
 
-for design/protoyping, we could use whatever we want!
+for design/prototyping, we could use whatever we want!
 
--> also have a **"tag soup"** alongside moodboard, vocab (including poetry) we wanna use in thez issue.
+-> also have a **"tag soup"** alongside mood-board, vocab (including poetry) we wanna use in the issue.
 
 
 ## next steps
@@ -183,5 +183,5 @@ for design/protoyping, we could use whatever we want!
 * @eigen (Jordan): draft a call for contributors message
 * everyone: proofread this message
 * Jordan: post it on lines
-* everyone: onboard new contributors without supressing all their ideas but without letting the scope / structure go off track
+* everyone: onboard new contributors without suppressing all their ideas but without letting the scope / structure go off track
 * Jordan: organize next meeting w/ new contributors
