--- a/2022-06-18.md
+++ b/2022-06-18.md
@@ -53,7 +53,7 @@ may be hard to coordinate printing ourselves as distribution would be worldwide.
 
 @eigen's draft of a cover deemed cool-enough as definitive cover, unless someone comes up w/ something different/better.
 
-![](./rsc/tilde-cover.png)
+<img src="./rsc/tilde-cover.png" width="50"/>
 
 
 ## available skillset
