--- a/2022-06-18.md
+++ b/2022-06-18.md
@@ -126,6 +126,15 @@ good enough for tracking.
 might need more personal progress / motivation tracking for contributors.
 
 
+#### process - post-meeting discord though
+
+![](./rsc/discord/post_meeting_3_1.png)
+
+![](./rsc/discord/post_meeting_3_2.png)
+
+![](./rsc/discord/post_meeting_3_3.png)
+
+
 ## final thoughts
 
 #### @awwaid - license declaration
