whoopsie, helen was here as well

--- a/2022-06-18.md
+++ b/2022-06-18.md
@@ -1,7 +1,7 @@
 # nornzine #1 - brainstorm #3
 20220618
 
-## attendees: @awwaid, @dewb, @eigen (Jordan), @infinitedigits (Zack), @radioedit (Duncan), @tomw, @zbs (Z)
+## attendees: @awwaid, @dewb, @eigen (Jordan), @Helen_G, @infinitedigits (Zack), @radioedit (Duncan), @tomw, @zbs (Z)
 
 
 ## agenda topics:
