--- a/2022-06-18.md
+++ b/2022-06-18.md
@@ -21,8 +21,9 @@ key ideas:
 - 2 main types of visual inspirations: DIY/punk zine VS pro/modern indie magazine
 - possible to merge the 2 by identifying key features of each and applying them
 
-from DIY we take: muted papery bg colors, degradation & artifacts (xerox effect)
-from modern we take: bold sans serif fonts, contrasting colors, pictures
+feature selection:
+- from DIY we take: muted papery bg colors, degradation & artifacts (xerox effect)
+- from modern we take: bold sans serif fonts, contrasting colors, pictures
 
 @eigen's proposed cover art is an example at that
 
