add expected nb of pages

--- a/2022-06-18.md
+++ b/2022-06-18.md
@@ -148,7 +148,7 @@ could go alongside the credits.
 
 ## next steps
 
-* [ ] @eigen: submit expected nb of words / page.
+* [x] @eigen: submit expected nb of words / page: 930 (full text), 750-800 (with inserts)
 * [ ] @eigen (Jordan): draft deadline message
 * [ ] everyone: proofread this message
 * [ ] @eigen: post it on lines
