--- a/2022-05-08.md
+++ b/2022-05-08.md
@@ -183,5 +183,5 @@ for design/prototyping, we could use whatever we want!
 * [x] @eigen (Jordan): draft a call for contributors message
 * [x] everyone: proofread this message
 * [x] Jordan: post it on lines
-* [] everyone: onboard new contributors without suppressing all their ideas but without letting the scope / structure go off track
-* [] Jordan: organize next meeting w/ new contributors
+* [x] everyone: onboard new contributors without suppressing all their ideas but without letting the scope / structure go off track
+* [x] Jordan: organize next meeting w/ new contributors
