--- a/2022-06-18.md
+++ b/2022-06-18.md
@@ -149,6 +149,6 @@ could go alongside the credits.
 ## next steps
 
 * [x] @eigen: submit expected nb of words / page: 930 (full text), 750-800 (with inserts)
-* [ ] @eigen (Jordan): draft deadline message
-* [ ] everyone: proofread this message
-* [ ] @eigen: post it on lines
+* [x] @eigen (Jordan): draft deadline message
+* [x] everyone: proofread this message
+* [x] @eigen: post it on lines
